Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -218,23 +218,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "14"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "age = 14\n",
-    "age"
+    "age = 14"
    ]
   },
   {
