Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -218,11 +218,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "age = 14"
+    "age = 14\n",
+    "age"
    ]
   },
   {
